--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="./images/favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>只为学习</title>
+    <link rel="stylesheet" href="./css/reset.css">
   </head>
   <body>
     <noscript>
