--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="icon" href="./images/favicon.ico">
     <title>只为学习</title>
     <link rel="stylesheet" href="./css/reset.css">
+    <script src="./js/autoSetFontSize.js"></script>
   </head>
   <body>
     <noscript>
