增加了iconfont的引入以及底部图标的初始化

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,14 @@
     <link rel="icon" href="./images/favicon.ico" />
     <title>只为学习</title>
     <link rel="stylesheet" href="./css/reset.css" />
+    <!-- iconfont 图标本地引入通用样式 -->
+    <link rel="stylesheet" href="./css/iconfont.css">
     <!-- 为根节点fontsize赋值 -->
     <script src="./js/autoSetFontSize.js"></script>
+    <!-- iconfont图标在线引入地址 -->
+    <script src="//at.alicdn.com/t/font_2974733_n0ji5c2ox1.js"></script>
+    <!-- iconfont 图标本地引入地址 -->
+    <!-- <script src="./js/iconfont.js"></script> -->
   </head>
   <body>
     <noscript>
